Fix the bug in the master branch.

--- a/index.html
+++ b/index.html
@@ -8,4 +8,6 @@ Username: <br>
 Password: <br>
 <input type="password" name="password"/>
 
-<h2>This is our first release.</h2>
+<h2>Fix the bug in this line</h2>
+
+<h2>After fixing the bug, release again.</h2>
